Add README, fix custom logical types and serializer config
- Add customer-facing README with setup instructions, test matrix,
  configuration reference, and project structure documentation
- Register custom varchar/char Avro logical types to support the
  freight CDC schema
- Fix serializers to use SyncOverAsync for Produce() compatibility
- Disable auto-registration; use UseLatestVersion for pre-registered schemas
- Fix Avro data factories to use DateTime for timestamp-millis fields
- Rename topics from throughput-test-* to test-* to match RBAC prefix

--- a/appsettings.json
+++ b/appsettings.json
@@ -17,10 +17,10 @@
     "MessageCount": 100000,
     "ProducerRuns": 3,
     "ConsumerRuns": 5,
-    "TopicPrefix": "throughput-test",
-    "AvroSmallTopic": "throughput-test-avro-small",
-    "AvroLargeTopic": "throughput-test-avro-large",
-    "JsonSmallTopic": "throughput-test-json-small",
-    "JsonLargeTopic": "throughput-test-json-large"
+    "TopicPrefix": "test-",
+    "AvroSmallTopic": "test-avro-small",
+    "AvroLargeTopic": "test-avro-large",
+    "JsonSmallTopic": "test-json-small",
+    "JsonLargeTopic": "test-json-large"
   }
 }
