Replace TestAvroDataTypesMsg with freight-derived schemas, use integer keys
- Derive small (25 fields) and large (104 fields) schemas from freight CDC tblloads
- Add Avro and JSON schema files for both sizes plus integer key schemas
- Create FreightDboTblLoadsSmall POCO model, remove TestAvroDataTypesMsg
- Change message keys from string to sequential int (ordinal 1, 2, 3...)
- Use AvroSerializer<int> for Avro topic keys, default Int32 for JSON topic keys
- Set AutoRegisterSchemas=false for all serializers (schemas pre-registered)
- Update README with new schema details and registration commands

--- a/ConfluentThroughputTestHarness.csproj
+++ b/ConfluentThroughputTestHarness.csproj
@@ -30,6 +30,9 @@
     <None Update="Schemas\*.avsc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Schemas\*.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
