Optimize producer config for throughput: acks=1, linger.ms=100, LZ4 compression

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,9 +5,10 @@
     "SaslMechanism": "Plain",
     "SaslUsername": "<API_KEY>",
     "SaslPassword": "<API_SECRET>",
-    "Acks": "All",
-    "LingerMs": 5,
-    "BatchSize": 1000000
+    "Acks": "Leader",
+    "LingerMs": 100,
+    "BatchSize": 1000000,
+    "CompressionType": "Lz4"
   },
   "SchemaRegistry": {
     "Url": "<SCHEMA_REGISTRY_URL>",
