Add per-message uniqueness headers and duration-based execution mode
- Add __test_seq (int) and __test_ts (string) fields to all 4 value schemas
  to ensure each message has unique content, proving serialization on every produce
- Add SetMessageHeader() to ITestDataFactory interface and all 4 factory implementations
- Add --duration N CLI flag for time-based runs (10/15/20 min) alongside existing count mode
- Update ProducerTestRunner and ConsumerTestRunner with unified loops supporting both modes
- Update Settings, TestDefinition, Program.cs, appsettings.json for DurationMinutes config
- Update README with new field counts, dual mode docs, and per-message uniqueness details

--- a/appsettings.json
+++ b/appsettings.json
@@ -16,6 +16,7 @@
   },
   "Test": {
     "MessageCount": 100000,
+    "DurationMinutes": null,
     "ProducerRuns": 3,
     "ConsumerRuns": 5,
     "TopicPrefix": "test-",
