Add 24-test producer matrix enums and configuration
- Add ProduceApi, CommitStrategy, RecordType enums to TestDefinition
- Expand T1.x from 4 to 24 producer tests covering all combinations
  of format, payload size, record type, produce API, and commit strategy
- Add BatchCommitSize (default 5000) to TestSettings and appsettings.json
- Add per-record-type Avro topic settings (specific/generic variants)
- Consumer tests (T2.x) unchanged

--- a/appsettings.json
+++ b/appsettings.json
@@ -19,9 +19,14 @@
     "DurationMinutes": null,
     "ProducerRuns": 3,
     "ConsumerRuns": 5,
+    "BatchCommitSize": 5000,
     "TopicPrefix": "test-",
     "AvroSmallTopic": "test-avro-small",
     "AvroLargeTopic": "test-avro-large",
+    "AvroSmallSpecificTopic": "test-avro-small-specificrecord",
+    "AvroSmallGenericTopic": "test-avro-small-genericrecord",
+    "AvroLargeSpecificTopic": "test-avro-large-specificrecord",
+    "AvroLargeGenericTopic": "test-avro-large-genericrecord",
     "JsonSmallTopic": "test-json-small",
     "JsonLargeTopic": "test-json-large"
   }
