Default DurationMinutes to 3 for duration-based mode

--- a/appsettings.json
+++ b/appsettings.json
@@ -16,7 +16,7 @@
   },
   "Test": {
     "MessageCount": 100000,
-    "DurationMinutes": null,
+    "DurationMinutes": 3,
     "ProducerRuns": 3,
     "ConsumerRuns": 5,
     "BatchCommitSize": 5000,
