Add T3.x business-realistic producer tests with Task.WhenAll concurrency windows
Prune T1.x from 24 to 8 drag-race tests (SpecificRecord only, Single commit,
both Produce/ProduceAsync APIs). Add 16 T3.x tests modeling production patterns:
acks=all, enable.idempotence=true, ProduceAsync with Task.WhenAll concurrency
windows (1, 10, 50, 100) across 4 format/size combos. T2.x consumers unchanged.

--- a/appsettings.json
+++ b/appsettings.json
@@ -20,6 +20,7 @@
     "ProducerRuns": 3,
     "ConsumerRuns": 3,
     "BatchCommitSize": 5000,
+    "BusinessRealisticRuns": 3,
     "TopicPrefix": "test-",
     "AvroSmallTopic": "test-avro-small",
     "AvroLargeTopic": "test-avro-large",
