Download Avro schemas from Schema Registry with local file caching
Replace file-based schema loading from Schemas/ directory with Schema
Registry downloads cached under schema-cache/. Add --refresh-schemas
CLI flag to force re-download. SpecificRecord classes now read from
the cache via SchemaRegistryCache.GetSchemaJsonFromCache().

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ credentials/
 results/
 *.csv
 
+## Schema cache (downloaded from Schema Registry at runtime)
+schema-cache/
+
 ## Claude Code
 .claude/
 CLAUD.md
