--- a/appsettings.json
+++ b/appsettings.json
@@ -19,15 +19,12 @@
     "DurationMinutes": 1,
     "ProducerRuns": 3,
     "ConsumerRuns": 3,
-    "BatchCommitSize": 5000,
-    "BusinessRealisticRuns": 3,
+    "BatchTimeoutSeconds": 5,
     "TopicPrefix": "test-",
     "AvroSmallTopic": "test-avro-small",
     "AvroLargeTopic": "test-avro-large",
     "AvroSmallSpecificTopic": "test-avro-small-specificrecord",
-    "AvroSmallGenericTopic": "test-avro-small-genericrecord",
     "AvroLargeSpecificTopic": "test-avro-large-specificrecord",
-    "AvroLargeGenericTopic": "test-avro-large-genericrecord",
     "JsonSmallTopic": "test-json-small",
     "JsonLargeTopic": "test-json-large"
   }
