Switch consumer tests to manual offset commit (T4.x expanded from 4 to 8)

--- a/appsettings.json
+++ b/appsettings.json
@@ -20,6 +20,7 @@
     "ProducerRuns": 3,
     "ConsumerRuns": 3,
     "BatchTimeoutSeconds": 5,
+    "CommitBatchSize": 100,
     "TopicPrefix": "test-",
     "AvroSmallTopic": "test-avro-small",
     "AvroLargeTopic": "test-avro-large",
