Add T3B.x business-realistic batch producer tests with inter-message delay
Add 12 new T3B.x tests (same matrix as T3.x: 3 windows × 2 formats × 2 sizes)
with a configurable InterMessageDelayMs (default 100ms) to simulate realistic
message arrival rates. Rename BatchTimeoutSeconds to BatchTimeoutMs (now 500ms)
so the batch deadline fires before the window fills, producing partial batches.
Also add CommitIntervalMs time-based commit threshold for consumer batch tests.

--- a/appsettings.json
+++ b/appsettings.json
@@ -19,8 +19,10 @@
     "DurationMinutes": 1,
     "ProducerRuns": 3,
     "ConsumerRuns": 3,
-    "BatchTimeoutSeconds": 5,
+    "BatchTimeoutMs": 500,
     "CommitBatchSize": 100,
+    "CommitIntervalMs": 500,
+    "InterMessageDelayMs": 100,
     "TopicPrefix": "test-",
     "AvroSmallSpecificTopic": "test-avro-small-specificrecord",
     "AvroLargeSpecificTopic": "test-avro-large-specificrecord",
